# backend_homework

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend_homework/api/: .database.env  .secret.env  alembic.ini  init-database.sh  main.py  populate.sh  populate_db.py  test_api.py
backend_homework/api/alembic/: env.py
backend_homework/api/alembic/versions/: 4f16e1ec52d8_create_tables.py
backend_homework/api/graphql_schemas/: controller.py  core.py  schemas.py
backend_homework/api/models/: user.py
backend_homework/api/routers/: user.py
backend_homework/api/schemas/: user.py
